# ActixWeb-Step-by-Step-Example

./: README.md
basic01/1.app_quickstart/: Cargo.toml
basic01/1.app_quickstart/src/: main.rs
basic01/2.app_views/src/: main.rs
basic01/2.app_views/src/view/: mod.rs
basic01/3.app_multiserver/: Cargo.toml
basic01/3.app_multiserver/src/: main.rs
basic01/3.app_multiserver/src/view/: mod.rs
basic01/4.app_data/: Cargo.toml
basic01/4.app_data/src/: main.rs
basic01/5.app_cookie_and_staticfile/: Cargo.toml
basic01/5.app_cookie_and_staticfile/src/: main.rs
basic01/6.app_serializer/: Cargo.toml
basic01/6.app_serializer/src/: main.rs
basic01/6.app_serializer/static/: 404.html  index.html
basic02/1.app_rest_with_file_storage/: Cargo.toml
basic02/1.app_rest_with_file_storage/src/: main.rs
basic02/1.app_rest_with_file_storage/src/cache/: mod.rs
basic02/1.app_rest_with_file_storage/src/serialization/: students.rs  teachers.rs
basic02/1.app_rest_with_file_storage/src/view/: mod.rs  students.rs  teachers.rs
basic02/1.app_rest_with_file_storage/src/view/auth/: login.rs  mod.rs
basic02/2.app_rest_with_redis_storage/: .env  Cargo.toml
basic02/2.app_rest_with_redis_storage/src/: app_data.rs  main.rs
basic02/2.app_rest_with_redis_storage/src/cache/: mod.rs
basic02/2.app_rest_with_redis_storage/src/serialization/: students.rs  teachers.rs
basic02/2.app_rest_with_redis_storage/src/view/: mod.rs  students.rs  teachers.rs
basic02/3.app_rest_with_db_storage/: .env
basic02/3.app_rest_with_db_storage/src/: main.rs
basic02/3.app_rest_with_db_storage/src/models/: mod.rs
basic02/3.app_rest_with_db_storage/src/serialization/: mod.rs
basic03/1.inject_html/templates/: index.html
basic03/2.inject_javascript/: Cargo.toml
basic03/2.inject_javascript/src/: schema.rs
basic03/2.inject_javascript/src/view/home/: index.rs
basic03/2.inject_javascript/templates/: index.html
basic03/3.injec_css/javascript/: main.js
basic04/1.jwt-token/javascript/: login.js
basic04/1.jwt-token/src/: errors.rs  main.rs
basic04/2.user-login/src/: main.rs
basic04/3.jwt-authentication/: Cargo.toml
basic05/: docker-compose.yml
basic05/2.integration-test/: Cargo.toml
basic05/2.integration-test/javascript/: main.js
basic05/2.integration-test/src/: main.rs
basic06/1.deploy-docker/: .env  Dockerfile  docker-compose.yml
basic06/1.deploy-docker/css/: main.css
basic06/1.deploy-docker/src/: app_data.rs  errors.rs  schema.rs
basic06/1.deploy-docker/templates/: login.html
basic06/1.deploy-local/: Dockerfile
basic06/2.deploy-docker-with-supervisord/: Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf  supervisor.conf  supervisor.conf.template
basic06/2.deploy-docker-with-supervisord/css/: base.css
basic06/2.deploy-docker-with-supervisord/migrations/2022-09-15-094424_create_teachers/: up.sql
basic06/2.deploy-docker-with-supervisord/src/: main.rs
basic06/2.deploy-docker-with-supervisord/src/models/: mod.rs
basic06/2.deploy-docker-with-supervisord/src/serialization/: users.rs
basic06/2.deploy-docker-with-supervisord/src/view/: users.rs
basic06/2.deploy-local-with-nginx/: docker-compose.yml
basic06/3.deploy-docker-with-nginx/: .env  Dockerfile  docker-compose.yml  nginx.conf
basic06/3.deploy-docker-with-nginx/src/: main.rs
basic06/3.deploy-docker-with-nginx/templates/: index.html
basic06/4.deploy-docker-with-high-avaliable-nginx/: .env  Dockerfile  docker-compose.yml
(+58 files in other folders)
