[package]
name = "actixdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web={version="4.1.0"}
actix-rt = "2.7.0"
actix-session = {version="0.7.1",features=["cookie-session"]}
actix-files = "0.6.2"
actix-http = {version="3.0.4",features=["http2"]}
env_logger = "0.5"
failure = "0.1.8"
futures = "0.3.21"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
