[package]
name = "actixwebdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
actix-session = {version="0.7.1",features=["cookie-session"]}
actix-files = "0.6.2"
actix-http = {version="3.0.4",features=["http2"]}
log = "0.4.15"
env_logger = "0.9.0"
futures = "0.3.24"
serde = {version="1.0",features=["derive"]}
serde_json = "1.0"
failure = "0.1.8"